Corrected an issue with the clock and small header being and not being shifted. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/Header.less
+++ b/css/Header.less
@@ -118,6 +118,9 @@
 .moon-small-header .moon-header-title {
 	line-height: @moon-small-header-line-height;
 }
+.enyo-locale-non-latin .moon-small-header .moon-header-title {
+	line-height: @moon-non-latin-small-header-line-height;
+}
 .moon-small-header .moon-header-title-wrapper {
 	padding-left: 0;
 	box-sizing: border-box;
