--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -1947,6 +1947,9 @@
 .moon-small-header .moon-header-title {
   line-height: normal;
 }
+.enyo-locale-non-latin .moon-small-header .moon-header-title {
+  line-height: 1.5em;
+}
 .moon-small-header .moon-header-title-wrapper {
   padding-left: 0;
   box-sizing: border-box;
